# gmrender-resurrect

./: Makefile.am  configure.ac
src/: Makefile.am
tests/: Makefile.am  basic.at  testsuite.at
